# full-bazar

./: .gitignore  docker-compose.yml  package.json  pyproject.toml  render.yaml  vercel.json
.github/workflows/: deploy.yml  scrape_and_sync.yml  trigger_scrape.yml
backend/: package-lock.json  package.json  test_api.js  verify_full_api.js
backend/src/: diagnose.js  server.js
data/: alif_products.csv  alif_products.csv.tmp  asaxiy_products.csv  beemarket_products.csv  brandstore_products.csv  castore_products.csv  castore_products.csv.tmp  chakana_products.csv  discont_products.csv  glotr_products.csv  idea_products.csv  idea_products.csv.tmp  joybox_products.csv  macbro_products.csv  mediapark-products.csv  mediapark-smartphones.csv  mediapark_phones.csv  mediapark_products.csv  mediapark_products.csv.tmp  mi_products.csv  olcha-products.csv  olcha-smartphones.csv  olcha_phones.csv  olcha_products.csv  olx_products.csv  openshop_products.csv  premier_products.csv  processed_matching_data.csv  prom_products.csv  radius_products.csv  smartphones_seed.csv  synthetic_matching_data.csv  texnomart_products.csv  ucell_products.csv  uzum-products.csv  uzum-smartphones.csv  uzum_products.csv  wildberries-products.csv
data/models/: best_matcher.pkl
frontend/: Dockerfile  README.md  build_error.txt  docker-entrypoint.sh  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: _redirects  robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx  navbar-animations.css
python/: sync_csv.py
(+87 files in other folders)
