[project]
name = "full-bazar"
version = "0.1.0"
description = "Marketplace aggregator for Uzbekistan"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "asyncpg>=0.29.0",
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "mlflow>=2.15.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
